Modif du nom d'app

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "d2445951-284a-4782-aa4f-8688d158e842",
-  "name": "ssapp",
+  "name": "4SS_TEST",
   "publisher": "FOFANA",
   "version": "1.1.0.0",
   "brief": "",
